src/SteamProject/wwwroot/css/Library.css
.achievement-btn {
    position: absolute;
    background-color: #000;
    opacity: 0%;
    border: none;
    transition: all 0.5s ease;
    background-image: url('../assets/achievement.png');
}


.achievement-btn:hover {
    opacity: 92%;
}

.hide-btn {
    top: 5px;
    right: 5px;
}

.follow-btn {
    bottom: 5px;
    right: 5px;
}

.hide-btn, .follow-btn {
    position: absolute;
    opacity: 30%;
    transition: all 1s ease;
    border-radius: 15%;
    font-size: 1.5rem
}

.gameContainer {
    transition: all 1s ease;
}

.gameContainer:hover > .hide-btn, .gameContainer:hover > .follow-btn {
    opacity: 90%;
}

.hide-btn:hover, .follow-btn:hover {
    opacity: 1;
}

.modal-content {
    border: none;
    border-radius: 1rem;
    background-color: #000;
    background-image: url('../assets/steam_gradient.png');
}

.modal-header {
    border-bottom: none;
    justify-content: flex-end;
}

.close {
    background: none;
    border: none;
}

.modal-body {
    display: flex;
    justify-content: center;
    align-items: center;
}

.modal-container {
    height: 30rem;
}

.modal-img {
    align-self: flex-end;
    height: 250px;
    width: 166px;
    border: 3px solid #4FE3BB;
}

h1, h4, h5, h6 {
    color: #fff;
    align-self: flex-start;
}

#modal-left {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.earned-label {
    white-space: nowrap;
    flex-wrap: wrap;
    height: fit-content;
}

.progress {
    background-color: #fff;
    width: 200px;
    height: 10px;
    border-radius: 20px;
}

.progress-value {
    background-color: #FF4600;
    position: absolute;
    height: 10px;
    border-radius: 20px;
}

#modal-right {
    height: 368px;
    overflow: scroll;
}

#ach-row {
    align-items: flex-end;
}

.ach-name {
    font-size: 0.69rem;
    white-space: pre-line;
}

.ach-img {
    height: 64px;
    width: 64px;
    border-radius: 10px;
}

.col-md-3 .ach-col {
    display: flex;
    justify-content: center;
    align-items: flex-end;
}

.ach-col {
    margin-bottom: 1rem;
}

.unearned {
    opacity: 40%;
}

#search-input {
    width: 235px;
    border: 2px solid #000;
    border-radius: 2rem;
    background-color: #fff;
    padding-left: 1rem;
}

